add controller tests
